Fix resolving URIs containing # character